fixed screen overflow

--- a/main.css
+++ b/main.css
@@ -260,7 +260,7 @@ table {
 
 @media only screen and (min-width: 768px) {
   .screen {
-    font-size: 56px;
+    font-size: 48px;
     line-height: normal;
     letter-spacing: -0.933px;
   }
