--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -21,7 +21,7 @@
 
 @media only screen and (min-width: v.$tablet) {
     .screen {
-        font-size: 56px;
+        font-size: 48px;
         line-height: normal;
         letter-spacing: -0.933px;
     }
